# maxsnew.github.io

./: .#maxsnew.github.com.cabal  .gitignore  .gitmodules  598-ps.sh  CNAME  README.md  Site.hs  TODO.org  about.html  archive.html  blog-ideas.org  blog.html  cabal.project.freeze  deploy.sh  gradual-polymorphism-artifact.html  hubway.html  hubway2.html  index.html  maxsnew.cabal  maxsnew.github.com.cabal  misc.html  paper-requirement.html  projects.html  publications.html  stack.yaml  style.css  teaching.html  thesis-proposal.html  web.js
app/: Main.hs
blog/: 2021-01-07-blog-test.html  2021-01-08-cbpv-primer.html
content/: about.md  archive.elm  archive.md  blog.html  blog.org  hubway.html  index.md  misc.md  paper-requirement.md  projects.md  publications.md  publications.yaml  teaching.md  thesis-proposal.md
content/blog/: 2021-01-07-blog-test.org  2021-01-08-cbpv-primer.org
content/css/: class.css  default.css  wedding.css
content/drafts/: infinitesimal-type.md  monad-tutorial.md  separating-conjunction-nl.md  topology-fibration.md
content/js/: elm-runtime.js  hubway.js
content/ps/: README.md  bower.json
content/templates/: blog-post.html  blog.html  class.html  default.html  publications.html  wedding.html
content/wedding/: index.md
css/: bootstrap-theme.css  bootstrap.css  class.css  default.css  wedding.css
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  (+3 more)
js/: elm-runtime.js  hubway.js
scratch/: service.yaml  test.html  test.org
src/: 483-wn26  Lib.hs  Site.hs  build-eecs-483.sh  deploy.sh
wedding/: index.html
(+1824 files in other folders)
