name:                MaxSNew
version:             0.1.0.0
synopsis:            My personal website
homepage:            https://maxsnew.github.com
license:             BSD3
license-file:        LICENSE
author:              Max New
maintainer:          maxsnew@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable maxsnew.github.com
  main-is:             Site.hs
  build-depends:       base >=4.6 && < 5,
                       hakyll
  hs-source-dirs:      src
  default-language:    Haskell2010
